--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.displayFlex {
+  display: flex;
+  border: none;
+}
 html,
 body,
 div,
@@ -82,7 +86,75 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 62.5%;
   font: inherit;
   vertical-align: baseline;
+}
+*,
+html,
+body {
+  box-sizing: border-box;
+}
+.header {
+  display: flex;
+  align-content: center;
+}
+.nav {
+  align-content: center;
+  margin: 3% 37% 0% 37%;
+}
+.nav a {
+  text-decoration: none;
+  font-size: 2rem;
+  color: grey;
+}
+.nav a:not(:last-child):after {
+  content: "|";
+}
+.title-container {
+  position: relative;
+  margin: 3% 20%;
+  width: 80%;
+  height: 20%;
+}
+.title-container img {
+  width: 60%;
+}
+.title-container button {
+  position: absolute;
+  left: 26%;
+  top: 55%;
+  background-color: white;
+  color: grey;
+  font-size: 1.2rem;
+  width: 200px;
+  padding: 0.5%;
+  border-radius: 5%;
+}
+.title-container h1 {
+  position: absolute;
+  left: 23%;
+  top: 35%;
+  font-size: 3rem;
+  color: white;
+}
+.artists-container {
+  display: flex;
+  margin: 0% 20%;
+}
+.artist {
+  flex-direction: column;
+  margin: 2%;
+  flex-wrap: wrap;
+}
+.artist img {
+  width: 400px;
+}
+.artist .bio {
+  width: 60%;
+}
+.artist a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-color: black;
 }
