--- a/css/index.css
+++ b/css/index.css
@@ -158,3 +158,33 @@ body {
   font-size: 1.5rem;
   font-color: black;
 }
+@media (max-width: 500px) {
+  h1 {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  button {
+    position: absolute;
+    left: 26%;
+    top: 55%;
+    background-color: white;
+    color: grey;
+    font-size: 0.6rem;
+    width: 100px;
+    padding: 0.5%;
+    border-radius: 5%;
+  }
+}
+@media (max-width: 500px) {
+  .header-1st,
+  .header-top {
+    width: 100% !important;
+  }
+}
+@media (max-width: 500px) {
+  .header-1st,
+  .header-top {
+    width: 100% !important;
+  }
+}
