--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,9 @@
         text-decoration:none;
         font-size:2rem;
         color:grey;
+        @media (max-width:500px){
+            font-size:.6rem;
+        }
         
     }
      a:not(:last-child):after {
