--- a/less/main.less
+++ b/less/main.less
@@ -14,6 +14,11 @@
         left:26%;
         top: 55%;
         .custom-btn (white, grey, 1.2rem, 200px);
+        @media (max-width:500px){
+            .custom-btn(white, gray, .6rem, 100px);
+            top:60%;
+            left:20%;
+        }
     }
     h1 {
         position: absolute;
@@ -21,19 +26,30 @@
         top: 35%;
         font-size: 3rem;
         color:white;
+        @media (max-width:500px){
+            font-size:1rem;
+        }
         }
 }
 
 .artists-container {
     display:flex;
     margin: 0% 20%;
+    flex-wrap:wrap
 }
     .artist {
     flex-direction:column;
     margin:2%;
     flex-wrap:wrap;
+    @media (max-width:500px){
+        flex-direction:row;
+        
+    }
     img {
         width:400px;
+        @media (max-width:500px){
+            width:250px;
+        }
     }
     .bio {
         width:60%;
