--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-.displayFlex {
-  display: flex;
-  border: none;
-}
 html,
 body,
 div,
@@ -96,128 +92,125 @@ body {
   box-sizing: border-box;
 }
 .header {
-  display: flex;
-  align-content: center;
+  display: inline;
+  justify-items: center;
 }
-.nav {
-  align-content: center;
-  margin: 3% 37% 0% 37%;
+.header .nav {
+  margin: 1.5% 0 0 0;
 }
-.nav a {
+.header .nav a {
   text-decoration: none;
   font-size: 2rem;
+  margin: 2%;
   color: grey;
+  align-content: center;
 }
 @media (max-width: 500px) {
-  .nav a {
-    font-size: 0.6rem;
+  .header .nav a {
+    font-size: 1.3rem;
   }
 }
-.nav a:not(:last-child):after {
+.header .nav a:hover {
+  color: black;
+}
+.header a:not(:last-child):after {
   content: "|";
+  position: relative;
+  right: -2%;
+}
+.navParent {
+  text-align: center;
 }
 .title-container {
-  position: relative;
-  margin: 3% 20%;
-  width: 80%;
-  height: 20%;
+  display: flex;
 }
-.title-container img {
-  width: 60%;
-}
-.title-container button {
-  position: absolute;
-  left: 26%;
-  top: 55%;
-  background-color: white;
-  color: grey;
-  font-size: 1.2rem;
-  width: 200px;
-  padding: 0.5%;
-  border-radius: 5%;
+.title-container .hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 65vh;
+  width: 70%;
+  margin: 1.5% 15%;
+  background-image: url("/assets/home.png");
+  background-position: center;
 }
 @media (max-width: 500px) {
-  .title-container button {
-    background-color: white;
-    color: gray;
-    font-size: 0.6rem;
-    width: 100px;
-    padding: 0.5%;
-    border-radius: 5%;
-    top: 60%;
-    left: 20%;
+  .title-container .hero {
+    height: 35vh;
   }
 }
-.title-container h1 {
-  position: absolute;
-  left: 23%;
-  top: 35%;
-  font-size: 3rem;
+.title-container .hero button {
+  height: auto;
+  margin: 2%;
+  font-size: 1.5rem;
+  border-radius: 5%;
+  padding: 1.5%;
+  background-color: white;
+  color: grey;
+}
+.title-container .hero button:hover {
+  background-color: grey;
+  color: white;
+}
+.title-container .hero h1 {
+  text-align: center;
+  font-size: 4rem;
   color: white;
 }
 @media (max-width: 500px) {
-  .title-container h1 {
-    font-size: 1rem;
+  .title-container .hero h1 {
+    font-size: 2rem;
   }
 }
 .artists-container {
   display: flex;
-  margin: 0% 20%;
-  flex-wrap: wrap;
-}
-.artist {
-  flex-direction: column;
-  margin: 2%;
-  flex-wrap: wrap;
+  justify-content: center;
+  margin: 2% 10%;
 }
 @media (max-width: 500px) {
-  .artist {
-    flex-direction: row;
+  .artists-container {
+    margin: 4% 0;
+    flex-direction: column;
   }
 }
-.artist img {
-  width: 400px;
+.artists-container img {
+  width: 38rem;
+  margin: 2% 5%;
+  border-radius: 3%;
 }
 @media (max-width: 500px) {
-  .artist img {
-    width: 250px;
+  .artists-container img {
+    width: 90%;
   }
 }
-.artist .bio {
-  width: 60%;
-}
-.artist a {
-  text-decoration: none;
-  font-size: 1.5rem;
-  font-color: black;
+.artists-container .bio {
+  width: 38rem;
+  text-align: center;
+  font-size: 1.4rem;
 }
 @media (max-width: 500px) {
-  h1 {
+  .artists-container .bio {
+    width: 90%;
     font-size: 1rem;
   }
 }
-@media (max-width: 500px) {
-  button {
-    position: absolute;
-    left: 26%;
-    top: 55%;
-    background-color: white;
-    color: grey;
-    font-size: 0.6rem;
-    width: 100px;
-    padding: 0.5%;
-    border-radius: 5%;
-  }
+.artists-container div {
+  margin: 0 5%;
+}
+.artists-container .title {
+  text-align: center;
+  font-size: 2rem;
 }
 @media (max-width: 500px) {
-  .header-1st,
-  .header-top {
-    width: 100% !important;
+  .artists-container .title {
+    font-size: 1.3rem;
   }
 }
-@media (max-width: 500px) {
-  .header-1st,
-  .header-top {
-    width: 100% !important;
-  }
+.artists-container a {
+  text-decoration: none;
+  color: grey;
+}
+.artists-container a:hover {
+  color: black;
 }
