--- a/less/main.less
+++ b/less/main.less
@@ -1,62 +1,90 @@
-.title-container {
-    position: relative;
-    margin: 3% 20%;
-    width:80%;
-    height:20%;
-    
-    img {
-        
-        
-        width:60%;        
-    }
-    button {
-        position: absolute;
-        left:26%;
-        top: 55%;
-        .custom-btn (white, grey, 1.2rem, 200px);
+.title-container {  
+    display:flex;
+    .hero {
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+        height:65vh;
+        width:70%;
+        margin:1.5% 15%;
+        background-image: url(/assets/Essentialism.png);
+        background-position:center;
         @media (max-width:500px){
-            .custom-btn(white, gray, .6rem, 100px);
-            top:60%;
-            left:20%;
+            height:35vh;
+            
+            
         }
+    button {
+        height:auto;
+        margin:2%;
+        font-size:1.5rem;
+        border-radius:5%;
+        padding:1.5%;
+        background-color:white;
+        color:grey;
+
+        
+ }
+    button:hover{
+        background-color:grey;
+        color:white;
     }
     h1 {
-        position: absolute;
-        left:23%;
-        top: 35%;
-        font-size: 3rem;
-        color:white;
+        text-align:center;
+        font-size: 4rem;
+        color:black;
         @media (max-width:500px){
-            font-size:1rem;
-        }
-        }
+            font-size: 2rem;
+        }    
+    }
+    }
 }
 
 .artists-container {
     display:flex;
-    margin: 0% 20%;
-    flex-wrap:wrap
-}
-    .artist {
-    flex-direction:column;
-    margin:2%;
-    flex-wrap:wrap;
+    justify-content:center;
+    margin:2% 10%;
     @media (max-width:500px){
-        flex-direction:row;
-        
+        margin:4% 0;
+        flex-direction:column;
     }
     img {
-        width:400px;
+        width:38rem;
+        margin: 2% 5%;
+        border-radius:3%;
         @media (max-width:500px){
-            width:250px;
+            width:90%;
         }
     }
     .bio {
-        width:60%;
+        width:38rem;
+        text-align:center;
+        font-size: 1.4rem;
+        @media (max-width:500px){
+            width:90%;
+            font-size: 1rem;
+            
+        }
+    }
+    div {
+        margin: 0 5%;
+        
+    }
+    .title {
+        text-align:center;
+        font-size:2rem;
+        
+        @media (max-width:500px){
+            font-size:1.3rem;
+        }
     }
     a {
         text-decoration:none;
-        font-size:1.5rem;
-        font-color:black;
+        color:grey;
     }
+    a:hover {
+        color:black;
+
+}
 }
