--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,20 +1,32 @@
 .header{
-    display:flex;
-    align-content:center;
-}
+    display:inline;
+    justify-items:center;
+    
 .nav {
-    align-content:center;
-    margin: 3% 37% 0% 37%;
+    margin: 1.5% 0 0 0;
+
     a {
         text-decoration:none;
         font-size:2rem;
+        margin: 2%;
         color:grey;
+        align-content:center;
         @media (max-width:500px){
-            font-size:.6rem;
+            font-size:1.3rem;
         }
-        
+        }
+    a:hover{
+        color:black;
+    }
     }
      a:not(:last-child):after {
         content: "|";
-    }
+        position:relative;
+        right:-2%;
+        
+}
+}
+
+.navParent{
+    text-align:center;
 }
