--- a/less/main.less
+++ b/less/main.less
@@ -19,21 +19,23 @@
         height:auto;
         margin:2%;
         font-size:1.5rem;
+        font-family:'Varela', sans-serif;
         border-radius:5%;
         padding:1.5%;
         background-color:white;
-        color:grey;
+        color:black;
 
         
  }
     button:hover{
-        background-color:grey;
+        background-color:black;
         color:white;
     }
     h1 {
         text-align:center;
         font-size: 4rem;
         color:black;
+        font-family:'Varela', sans-serif;
         @media (max-width:500px){
             font-size: 2rem;
         }    
