--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,30 +3,61 @@
     justify-items:center;
     
 .nav {
-    margin: 1.5% 0 0 0;
+    margin: 1% 0 0 0;    
 
     a {
         text-decoration:none;
         font-size:2rem;
+        font-family:'Varela', sans-serif;
         margin: 2%;
-        color:grey;
+        color:black;
         align-content:center;
         @media (max-width:500px){
             font-size:1.3rem;
         }
         }
     a:hover{
-        color:black;
+        color:grey;
     }
     }
-     a:not(:last-child):after {
-        content: "|";
-        position:relative;
-        right:-2%;
-        
-}
-}
+    }
 
 .navParent{
     text-align:center;
 }
+
+#navbar {
+    overflow: hidden;
+    background-color:white;
+    padding: 1%;
+  }
+
+  #navbar a {
+    text-decoration:none;
+    font-size:2rem;
+    margin: 2%;
+    color:black;
+    align-content:center;
+    @media (max-width:500px){
+        font-size:1.3rem;
+  }
+}
+  
+  .content {
+    padding: 16px;
+  }
+  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color:black !important;
+    opacity:.85;
+    a {
+        color:white !important;
+    }
+  }
+
+  .sticky + .content {
+    padding-top: 60px;
+  }
