--- a/less/navigation.less
+++ b/less/navigation.less
@@ -61,3 +61,56 @@
   .sticky + .content {
     padding-top: 60px;
   }
+
+  .footer{
+    justify-items:center;
+    
+    
+.ul {
+    margin: 0 0 0 0;  
+      
+
+    div {
+        
+      text-decoration:none;
+        font-size:1.5rem;
+        font-family:'Varela', sans-serif;
+        margin: 2%;
+        color:black;
+        align-content:center;
+        @media (max-width:500px){
+            font-size:1.3rem;
+        }
+        }
+    div:hover{
+        color:grey;
+    }
+    }
+    }
+
+  .footerParent{
+      display: flex;
+      flex-direction:row;
+      justify-content:space-evenly;
+      text-align:center;
+      background-color:black;
+  }
+  
+  .footerUL {
+    display:flex;
+    flex-direction:row;  
+    background-color:black;
+  }
+  
+    .footerUL div {
+      flex-wrap:none;
+      white-space:nowrap;
+      text-decoration:none;
+      font-size:1.3rem;
+      margin: 2%;
+      color:white;
+      align-content:center;
+      @media (max-width:500px){
+          font-size:1rem;
+    }
+  }
